--- a/iOS/QookleApp.iOS.csproj
+++ b/iOS/QookleApp.iOS.csproj
@@ -93,6 +93,9 @@
     <Reference Include="Xamarin.Forms.Xaml">
       <HintPath>..\packages\Xamarin.Forms.1.0.6186\lib\MonoTouch10\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\DLL\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QookleApp\QookleApp.csproj">
@@ -102,8 +105,6 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
-    <BundleResource Include="Resources\MainScreen.jpg" />
-    <BundleResource Include="Resources\qookle header.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
