--- a/iOS/QookleApp.iOS.csproj
+++ b/iOS/QookleApp.iOS.csproj
@@ -105,18 +105,30 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
-    <BundleResource Include="Resources\MainScreen.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
     <None Include="packages.config" />
+    <None Include="Resources\cross.png" />
+    <None Include="Resources\Star.png" />
+    <None Include="Resources\Back.jpg" />
+    <None Include="Resources\Back2.jpg" />
+    <None Include="Resources\Button.jpg" />
+    <None Include="Resources\Qookle.jpg" />
+    <None Include="Resources\Splash.jpg" />
+    <None Include="Resources\StartScreen.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="Helpers\WebServiceHelper.cs" />
+    <Compile Include="Renderers\LoginFacebookPageRenderer.cs" />
+    <Compile Include="Renderers\CircelButtonRenderer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.0.6186\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.0.6186\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets')" />
+  <ItemGroup>
+    <Folder Include="Renderers\" />
+  </ItemGroup>
 </Project>
