--- a/Android/packages.config
+++ b/Android/packages.config
@@ -6,5 +6,6 @@
   <package id="Xamarin.Android.Support.v7.AppCompat" version="20.0.0.2" targetFramework="MonoAndroid403" />
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="20.0.0.1" targetFramework="MonoAndroid403" />
   <package id="Xamarin.Forms" version="1.2.3.6257" targetFramework="MonoAndroid403" />
+  <package id="Xamarin.GooglePlayServices" version="19.0.0.1" targetFramework="MonoAndroid403" />
   <package id="xamstore-xamarin.auth" version="1.2.2" targetFramework="MonoAndroid403" />
 </packages>
