--- a/Android/Properties/AndroidManifest.xml
+++ b/Android/Properties/AndroidManifest.xml
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="QookleApp.Android">
-	<uses-sdk />
+	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="19" />
+	<uses-feature android:glEsVersion="0x00020000" android:required="true" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<application android:label="QookleApp.Android">
 	</application>
 </manifest>
