--- a/QookleApp/QookleApp.csproj
+++ b/QookleApp/QookleApp.csproj
@@ -33,9 +33,6 @@
     <Compile Include="App.cs" />
     <Compile Include="Models\Ingredient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\AdsPage.xaml.cs">
-      <DependentUpon>AdsPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -76,6 +73,9 @@
     <Compile Include="ViewModels\DetailedRecipeViewModel.cs" />
     <Compile Include="Views\Controls\BorderedImage.cs" />
     <Compile Include="Views\Controls\CustomList.cs" />
+    <Compile Include="Views\Controls\GoogleAdsView.xaml.cs">
+      <DependentUpon>GoogleAdsView.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.2.3.6257\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.2.3.6257\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets')" />
@@ -104,6 +104,9 @@
     <EmbeddedResource Include="Views\LoginFacebookPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\Controls\GoogleAdsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
@@ -119,11 +122,5 @@
   <ItemGroup>
     <EmbeddedResource Include="Data\Ingredienti.json" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Views\AdsPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </EmbeddedResource>
   </ItemGroup>
 </Project>
