Fixed UI Recipe List

--- a/Android/QookleApp.Android.csproj
+++ b/Android/QookleApp.Android.csproj
@@ -132,4 +132,7 @@
       <Visible>False</Visible>
     </XamarinComponentReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\drawable\border.png" />
+  </ItemGroup>
 </Project>
