--- a/Android/QookleApp.Android.csproj
+++ b/Android/QookleApp.Android.csproj
@@ -117,6 +117,7 @@
     <AndroidResource Include="Resources\drawable\StarScreen.jpg" />
     <AndroidResource Include="Resources\drawable\SplashScreen.xml" />
     <AndroidResource Include="Resources\drawable\Pic100.png" />
+    <AndroidResource Include="Resources\drawable\border.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.2.3.6257\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.2.3.6257\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets')" />
