--- a/QookleApp.WP/QookleApp.WP.csproj
+++ b/QookleApp.WP/QookleApp.WP.csproj
@@ -157,6 +157,7 @@
     <Content Include="README_FIRST.txt" />
     <Content Include="SplashScreenImage.jpg" />
     <Content Include="Star.png" />
+    <Content Include="StartScreen.jpg" />
     <Content Include="StartScreen.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Add.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Cancel.png" />
