#2 - iPad layout - fix MainPage background to all resolutions + small UI fixes
Minor:   project cleanup, junk images cleanup,

--- a/Android/QookleApp.Android.csproj
+++ b/Android/QookleApp.Android.csproj
@@ -122,7 +122,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\Main.axml" />
     <AndroidResource Include="Resources\values\Strings.xml" />
     <AndroidResource Include="Resources\drawable\Icon.png" />
     <AndroidResource Include="Resources\drawable\facebook.png" />
@@ -149,6 +148,12 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\drawable\border.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\layout\" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Button_r.png" />
   </ItemGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
