--- a/Android/Properties/AndroidManifest.xml
+++ b/Android/Properties/AndroidManifest.xml
@@ -5,5 +5,5 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<application android:label="QookleApp.Android" android:icon="@drawable/Icon"></application>
+	<application android:label="Qookle" android:icon="@drawable/Icon"></application>
 </manifest>
