--- a/QookleApp.WP/packages.config
+++ b/QookleApp.WP/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="wp80" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
+  <package id="Xamarin.Forms" version="1.3.5.6337" targetFramework="wp80" />
 </packages>
